api fix, list not fix

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         </activity>
 
         <service android:name=".TranslatorService"/>
+        <receiver android:name=".MyActivity$Receiver" />
 
     </application>
 
