--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Oct 09 15:20:14 MSK 2014
-sdk.dir=C\:\\Users\\\u0415\u0433\u043E\u0440\\Desktop\\adt-bundle-windows-x86_64-20131030\\sdk
+#Thu Oct 09 17:18:27 MSK 2014
+sdk.dir=C\:\\Users\\Pavel\\AppData\\Local\\Android\\android-studio\\sdk
